k8s/cluster-apps/triliumnext/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
  labels:
    app: trilium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trilium
  template:
    metadata:
      labels:
        app: trilium
    spec:
      containers:
      - name: trilium
        image: triliumnext/notes:latest@sha256:846671ab2f0025b66d7bc9563e22b983f04b85c047aac6cdeb2d4e52c245c516
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: trilium-data
          mountPath: /home/node/trilium-data
        - name: timezone
          mountPath: /etc/timezone
          readOnly: true
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
      volumes:
        - name: trilium-data
          hostPath:
            path: /config/trilium-data
            type: DirectoryOrCreate
        - name: timezone
          hostPath:
            path: /etc/timezone
            type: File
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
