k8s/cluster-apps/triliumnext/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
spec:
  selector:
    app: trilium
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
